# devdash_rust

./: Cargo.toml  LICENSE  README.md  config.example.json
src/: app.rs  config.rs  main.rs  storage.rs
src/modules/: build.rs  coverage.rs  git.rs  mod.rs  system.rs  timer.rs
src/ui/: layout.rs  mod.rs  themes.rs  widgets.rs
