[package]
name = "devdash"
version = "0.1.0"
edition = "2021"
authors = ["moonguip <your-email@example.com>"]
description = "A terminal-based developer dashboard with Git status, CI/CD monitoring, test coverage, and focus timer"
license = "BSD-3-Clause"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
git2 = "0.20"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
futures = "0.3"
